# hotdog-not-hotdog

./: .gitignore  README.md  pyproject.toml
src/: setup_dataset.py
src/hotdog/: main.py  predict.py  train.py  utils.py
